kubernetes/apps/external-endpoints/truenas/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "TrueNAS"
    gethomepage.dev/description: "NAS"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "truenas.png"
spec:
  parentRefs:
    - name: ${gatewayName}
      namespace: gateway
      sectionName: https
  hostnames:
    - "nas.${domain}"
  rules:
    - backendRefs:
        - name: truenas
          port: 80
